# autoErpPlatform

./: .env.example  .gitignore  README.md  config.yml  generate_project_tree.py  pyproject.toml
scripts/: README.md  generate_project_tree.py  repo_analyzer_v2.py  repo_analyzer_v3.py
services/api_gateway_ts/: package.json
services/python_adapter_py/src/erp_core/: config.py
services/rust_engine_rs/: Cargo.toml
services/rust_engine_rs/src/: main.rs
web_ui/: README.md  package-lock.json  package.json
